Answer  dialog on question detail

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -1,4 +1,5 @@
-﻿<div class="left-panel">
+﻿<div #answerAnchor></div>
+<div class="left-panel">
     <related-question-left-menu></related-question-left-menu>
     <related-topic [topicId]="question?.questionTopics[0]?.topicId"></related-topic>
     <category-left-menu [caegoryId]="question?.categories[0]?.id"></category-left-menu>
@@ -19,7 +20,7 @@
             <ap-comment [isQuestion]='true' [questionId]="question?.id"></ap-comment>
         </div>
         <hr />
-        <button class="answer-button" data-toggle="modal" data-target="#myModal">Answer</button>
+        <button class="answer-button" (click)="answerDialogBox(question)">Answer</button>
         <div class="summery-panel">
             <h4>{{question.answers?.length}} Answers</h4>
             <div class="row">
@@ -66,7 +67,7 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form #answerVM="ngForm" class="form-horizontal" role="form">
             <div class="modal-content">
@@ -120,4 +121,4 @@
             </div>
         </form>
     </div>
-</div>
+</div>-->
