search panel: drop down seperated

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -16,7 +16,7 @@
             <div class="img-container" *ngIf="!isAnonymous">
                 <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
             </div>
-            <div class="img-container" *ngIf="isAnonymous" class="col-lg-1">
+            <div class="img-container" *ngIf="isAnonymous" >
                 <img class="user-image " src="../../../../profile/Anonymous.png" />
             </div>
 
