--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,31 +1,4 @@
-﻿<style>
-    .icon-container {
-        position: relative;
-    }
-
-    .question-begin {
-        position: absolute;
-        font-size: 22px;
-        left: 4px;
-        top: 5px;
-        z-index: 9050;
-        font-weight: bold;
-    }
-
-    .question-end {
-        position: absolute;
-        font-size: 22px;
-        z-index: 9050;
-        font-weight: bold;
-        margin-left:10px;
-        top: 8px;
-    }
-
-    .form-control {
-        padding: 5px 15px;
-    }
-</style>
-<div class="z-header" [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
+﻿<div class="z-header" [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
     <div class="input-group center-width" id="adv-search">
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
             <div class="icon-container">
@@ -34,33 +7,10 @@
                 <div [hidden]="!showQuestion" class="question-begin">¿</div>
                 <div [hidden]="!showQuestion" class="question-end" id="question-end">?</div>
                 <div id="temp-text" style="position:absolute;top:-100px;">{{title}}</div>
-
             </div>
-
             <div class="suggestions" id="suggestion" *ngIf="isOnModal">
                 <!-- Question Text -->
-                <div class="suggestion-container" *ngIf="isOnModal">
-                    <select class="question-control" id="Category" required (change)="onCategoryChange(categoryObj.value)" name="category" #categoryObj>
-                        <option [value]="-1" disabled="true" selected>Selecciona la categoría</option>
-                        <option *ngFor="let category of categories" [value]="category.id">
-                            {{category.name}}
-                        </option>
-                    </select>
-                    <select class="question-control" name="topics" id="topics" required (change)="onTopicChange(topicObj.value)" #topicObj>
-                        <option [value]="-1" disabled="true" selected>Selecciona la tematica</option>
-                        <option *ngFor="let topic of topics" [value]="topic?.id">
-                            {{topic?.topicName}}
-                        </option>
-                    </select>
-                    <select class="question-control" name="levels" id="levels" required (change)="onLevelChange(levelObj.value)" #levelObj>
-                        <option [value]="-1" disabled="true" selected>Selecciona la complejidad</option>
-                        <option *ngFor="let level of levels" [value]="level.id">
-                            {{level.levelName}}
-                        </option>
-                    </select>
-                    <textarea name="body" class="question-control" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
-                    <input type="checkbox" #cv [checked]=false (change)="onChange(cv.checked)" /> <label>Preguntar Anonimo</label>
-                </div>
+                <search-dropdown [title]="title"></search-dropdown>
                 <!-- Question Suggestion -->
                 <div class="suggestion-container" *ngIf="(filteredQuestionList.length>0) || (categoryMatched?.length > 0)">
                     <div class="arrow-container"></div>
