akash:top 5 topic

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -10,7 +10,7 @@
             <topfive-question-left-menu > </topfive-question-left-menu>
             <topfive-user></topfive-user>
             <topfive-topic></topfive-topic>
-            <category-left-menu [caegoryId]="id"></category-left-menu>
+            <category-left-menu [caegoryId]="categoryId"></category-left-menu>
         </div>
     </div>
     <div class="center-width center-body">
@@ -21,7 +21,7 @@
                 {{categorySelected?.name}}
                 
                 t={{topicId}}
-                c{{categoryId}}
+                c={{categoryId}}
                 l={{levelId}}
             </h2>
         </div>
