--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-topic.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/related-topic.component.html
@@ -3,7 +3,7 @@
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list" *ngIf="relatedTopics.length>0">
         <li *ngFor="let relatedTopic of relatedTopics">
-            <a [routerLink]="['/question/home/0',{topicId:relatedTopic.id,categoryId:relatedTopic.categoryId}]"> {{relatedTopic?.topicName}}</a>
+            <a [routerLink]="['/question/home',{topicId:relatedTopic.id,categoryId:relatedTopic.categoryId}]"> {{relatedTopic?.topicName}}</a>
         </li>
     </ul>
 </div>
