question detail reload on submit question

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-dialog/answer-dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-dialog/answer-dialog.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
     <div class="modal-content answer-dialog">
         <div class="exit-button" (click)="onClickedExit()">x</div>
-        <answer-submit [question]="question" [isFullScreen]="false" ></answer-submit>
+        <answer-submit [question]="question" [isFullScreen]="false" [isDetail]="isDetail"></answer-submit>
     </div>
 </div>
