--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-topic.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-topic.component.html
@@ -3,7 +3,9 @@
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="left-panel-list" *ngIf="topFiveTopics.length>0">
         <li *ngFor="let topFiveTopic of topFiveTopics">
-            <a [routerLink]="['/question/home',{topicId:topFiveTopic?.id,categoryId:topFiveTopic?.categoryId}]"> {{topFiveTopic?.topicName}}</a>
+            <!--<a [routerLink]="['/question/home',{topicId:topFiveTopic?.id,categoryId:topFiveTopic?.categoryId}]"> {{topFiveTopic?.topicName}}</a>-->
+            <!-- Here last zero valueis dummy value -->
+            <a [routerLink]="['/question/home',topFiveTopic?.categoryId,topFiveTopic?.id,0]"> {{topFiveTopic?.topicName}}</a>
         </li>
     </ul>
 </div>
