befor update of production

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -26,6 +26,7 @@
 /*Components Less*/
 @import "site/components/tab-panel.component.less";
 @import "site/components/question-details";
+@import "site/components/question-body";
 .right-border{
     border-right:1px solid;
     color:white;
