--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
@@ -16,6 +16,7 @@
     box-shadow: inset 0 1px rgba(255,255,255,0.19);
     .button-variant(white; #20b61f; #1ba31b);
 }
+
 .btn-primary {
     background-color: #F6912B;
     border-color: #F6912B;
@@ -30,5 +31,18 @@
         color: red;
         background-color: transparent;
         border: none;
+    }
+
+    .alta-btn {
+        padding: 4px 12px;
+        font-family: typogroteskrounded;
+        background-color: #ececec;
+        border: none;
+        border-radius: 10px;
+        font-size: 16px;
+    }
+    .alta-btn-lg{
+        padding:15px;
+        margin-bottom:10px
     }
 }
