--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
@@ -1,4 +1,9 @@
 ﻿
+.filter-panel{
+    background-color: #f6f6f6;
+    margin-bottom: 10px;
+    padding: 10px 10px 25px 10px;
+}
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -21,12 +26,7 @@
     border-color: #bec8d0;
 }
 
-.read-question-button {
-    margin-bottom: 20px;
-    background-color: #f6f6f6;
-    padding: 10px;
-    font-family:
-}
+
 .img-category {
     width :50px;
     height :50px;
