--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -20,13 +20,13 @@
             <h2 class="category-title">
                 {{categorySelected?.name}}
                 
-                t={{topicId}}
+                <!--t={{topicId}}
                 c={{categoryId}}
-                l={{levelId}}
+                l={{levelId}}-->
             </h2>
         </div>
         <div class="row">
-            <button type="button" (click)="addFollower(categorySelected.id)" class="btn btn-lg">Follow</button>
+            <button type="button" (click)="addFollower(categorySelected.id)" class="alta-btn alta-btn-lg">Follow</button>
             <p>
                 {{categorySelected?.description}}
             </p>
@@ -39,19 +39,22 @@
                 </tr>
             </table>
         </div>
-        <div class="row read-question-button">
+        <div class="filter-panel">
+            <div class="read-question-button">
                 <a (click)="getQuestionsAnswered(categorySelected.id)">
                     <span class="glyphicon glyphicon-question-sign"></span> Question
                 </a>
                 <a (click)="getQuestionNotAnswered(categorySelected.id)" class="pull-right">
                     <span class="glyphicon glyphicon-pencil"></span> Answers
-                </a>           
+                </a>
+            </div>
+            <div class="read-question-button">
+                <div class="col-md-4"><a (click)="GetLatestQuestionByDate(categorySelected.id)" class="pull-left">The latest question</a> </div>
+                <div class="col-md-4 text-center"><a (click)="getbestquestionbytotallike(categorySelected.id)"> The best Question</a></div>
+                <div class="col-md-4 "><a class="pull-right" (click)="getmorequestionbyviewcount(categorySelected.id)">The more views</a></div>
+            </div>
         </div>
-        <div class="row read-question-button">
-            <div class="col-md-3">The latest question</div>
-            <div class="col-md-3"><a (click)="bestquestionbytotallike(categorySelected.id)"> The best Question</a></div>
-            <div class="col-md-3"><a (click)="getmorequestionbyviewcount(categorySelected.id)">The more views</a></div>
-        </div>
+       
 
         <div class="clearfix"></div>
         <div infinite-scroll
