akash:book mark diend

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
@@ -172,7 +172,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                        <li class="align-of-header"><a asp-controller="Home" asp-action="Index">My Bookmark</a></li>
+                        @*<li class="align-of-header"><a asp-controller="Home" asp-action="Index">My Bookmark</a></li>*@
                        
                     </ul>
                 <ul></ul>
