style fixed for left menu, question detail

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
@@ -1,5 +1,8 @@
-﻿h4 {
+﻿.summery-panel > h4 {
     display: inline;
+    border: 1px solid #eeeeee;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 a {
