--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -156,6 +156,7 @@ a {
 .btn-primary {
     background-color: #F6912B;
     border-color: #F6912B;
+    color: white;
 }
 
     .btn-primary:hover {
