--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/alta-sites.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/alta-sites.less
@@ -18,3 +18,16 @@
     padding-left:15px;
     min-height: 150vh;
 }
+.alta-btn {
+    padding: 4px 12px;
+    font-family: typogroteskrounded;
+    background-color: #ececec;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+.alta-btn-lg {
+    padding: 15px;
+    margin-bottom: 10px;
+}
