--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-body.less
@@ -2,6 +2,7 @@
 .filter-panel{
     background-color: #f6f6f6;
     margin-bottom: 10px;
+    margin-top:10px;
     padding: 10px 10px 25px 10px;
 }
 .line-clamp {
