--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,8 +1,8 @@
-﻿<div class="z-header" [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
+﻿<div [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
     <div class="input-group center-width" id="adv-search">
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
             <div class="icon-container">
-                <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off" (click)="showModal()"
+                <input type="text" class="form-control search-input fixed-height z-header" #searchText placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off" (click)="showModal()"
                        [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions($event) />
                 <div [hidden]="!showQuestion" class="question-begin">¿</div>
                 <div [hidden]="!showQuestion" class="question-end" id="question-end">?</div>
