left panel over lap with footer fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/alta-sites.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/alta-sites.less
@@ -5,8 +5,8 @@
 }
 .left-panel {
     margin-left: 15px;  /*For row:-15px*/
-    position:absolute;
-    width: 22%;
+    float:left;
+    width: 21%;
     padding-right:10px;
 }
 .center-width{
@@ -30,4 +30,8 @@
 .alta-btn-lg {
     padding: 15px;
     margin-bottom: 10px;
+}
+.row-fix{
+    padding-right: 15px;
+    padding-left: 15px;
 }
