--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -45,7 +45,7 @@
                         <a (click)="bookmarkClicked(questionObj?.id)">Bookmark</a>
                     </li>
                     <li style="list-style-type: none;">
-                        <a href="#">Report</a>
+                        <a (click)="questionReportClicked()">Report</a>
                     </li>
 
                 </ul>
