questio detail, question home z-index fix for search

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/z-index-schem.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/z-index-schem.less
@@ -2,6 +2,7 @@
 @zindexModalBootstrapOverlay    : 9005;
 @zindexModalBootstrap    : 90010;
 @zindexOverlay  : 8000;
+@zindexSearch     : 7050;
 @zindexHeader   : 7000;
 @zindexBanner   : 6000;
 @zindexBody     : 5000;
@@ -24,6 +25,9 @@
 
 .z-banner{
     z-index:@zindexBanner;
+}
+.z-search{
+    z-index:@zindexSearch;
 }
 .z-ground{
     z-index:@zindexBody;
