--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
@@ -6,7 +6,7 @@
     }
     
 </style>
-<div class="navbar navbar-inverse navbar-fixed-top backgroundset">
+<div class="navbar navbar-inverse navbar-fixed-top backgroundset z-header">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
