--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -7,6 +7,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     color:white;
+    width:10%;
 }
 
 .icon-container {
@@ -94,6 +95,8 @@ a {
 }
 
 .search-input {
+    background-color: #f5f5f5;
+    width: 90%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     float: left;
@@ -135,6 +138,8 @@ a {
     left: 0;
     right: 0;
     overflow: visible;
+    margin-left:-15px;
+    margin-right:-15px;
 }
 
 .top-fixed {
@@ -146,11 +151,6 @@ a {
 
 .fixed-height {
     height: 45px;
-}
-
-.search-input {
-    background-color: #f5f5f5;
-    width: 90%;
 }
 
 .form-control {
