Left menu hover  done

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/styles/left-menu.css
@@ -26,7 +26,7 @@ ul {
 }
 
     .menu-container > ul > li > a:hover {
-        color: #5a4a4a;
+        color: #f7a756;
     }
 
 .question-list > a {
