akash:Usersummary fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -34,7 +34,7 @@
         <div class="other-function" *ngIf="isQuestion">
             <a [popover]="myPopover" >...</a>
             <popover-content #myPopover
-                                placement="right"
+                                placement="top"
                                 [closeOnClickOutside]="true">
                 <span></span>
                 <ul style="list-style-type: none;">
