--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-report/question-report.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-report/question-report.component.html
@@ -1,22 +1,34 @@
 ﻿<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
 
     <div class="dialog">
+        <header>
+            <div class="question-title">
+                
+                <h3>
+                    Submit Report
+                </h3>
+            </div>
+        </header>
         <div class="exit-button" (click)="onClickedExit()">x</div>
-       
+
         <div class="panel-article">
             <div class="details-container">
                 <div class="article-details">
-                    <!--  <user-info [userObj]="question?.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
-                    <div>
-                        <p class="answer-text" [innerHTML]="question?.bestAnswer?.text"></p>
-                        <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question?.bestAnswer"> </ap-status>
-                        <ap-comment [isQuestion]='false' [questionId]="question?.id" [answerId]="question?.bestAnswer?.id"></ap-comment>
-                        <br />
-                        <button *ngIf="question.answerCount>1" class="btn btn-default" [routerLink]="['/question/detail',question.id]">View Other {{question?.answerCount-1}} answers</button>
-                    </div>-->
-                    Hello modal
+                    <div class="left-panel-list" *ngIf="questionReports">
+                        <div *ngFor="let questionReport of questionReports">
+                            <input type="radio" [(ngModel)]="selectedQuestionReport" name="questionReport" value="{{questionReport?.title}}"> {{questionReport?.title}}<br>
+
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <input [(ngModel)]="comment" type="text" class="form-control" placeholder="Comments(optional)"/>
                 </div>
             </div>
         </div>
+        <footer>
+            <button type="button" class="btn btn-secondary" (click)="onClickedExit()">Close</button>
+            <button type="button" class="btn btn-primary" (click)="save()">Save changes</button>
+        </footer>
     </div>
 </div>
